# powerset

./: CHANGELOG.md  LICENSE  powerset.cabal
src/: PowerSet.hs  Sample.hs
test/: Main.hs
