cabal-version:      3.0
name:               powerset
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             David Feuer
maintainer:         David.Feuer@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  PowerSet
      Sample
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.1.0,
        containers,
        primitive
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite powerset-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.19.1.0,
        containers,
        powerset
